update hello logic

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,7 +5,11 @@
     </head>
     <body>
         
-        <p>Replace this with the hello page logic.</p>
+        {% if name != None %}
+            <p>Hello, {{ name }}</p>
+        {% else %}
+            <p>Hello, world.</p>
+        {% end if %}
 
     </body>
 </html>
