--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         
-        {% if name != None %}
+        {% if name %}
             <p>Hello, {{ name }}</p>
         {% else %}
             <p>Hello, world.</p>
