--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,12 +4,12 @@
         <title>Hello Page</title>
     </head>
     <body>
-        
+        <h1>
         {% if name %}
-            <p>Hello, {{ name }}</p>
+            <p>Hello, {{ name }}!</p>
         {% else %}
-            <p>Hello, world.</p>
-        {% end if %}
-
+            <p>Hello, world!</p>
+        {% endif %}
+        </h1>
     </body>
 </html>
